--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -36,6 +36,14 @@
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-language</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax/javaee-web-api -->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
