--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "react-wordcloud": "^1.2.7"
+    "react-wordcloud": "^1.2.7",
+    "react-twitter-widgets": "^1.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
