--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-wordcloud": "^1.2.7",
-    "react-twitter-widgets": "^1.9.5"
+    "react-twitter-widgets": "^1.9.5",
+    "http-proxy-middleware": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
